agregado de interfaces

--- a/src/app/ingresar/ingresar.component.html
+++ b/src/app/ingresar/ingresar.component.html
@@ -3,7 +3,7 @@
     <div class="col-4">
         <div class="card">
             <div class="card-header text-center">
-                Ingresar a JMB
+                <h3 class="text-color-jmb"> Ingresar a JMB</h3>
             </div>
             <div class="card-body">
                 <form>
@@ -16,7 +16,7 @@
                         <input type="" class="form-control" id="">
                     </div>
 
-                    <button type="button" class="btn btn-primary form-control">Ingresar</button>
+                    <button type="button" class="btn btn-primary form-control" routerLink="/panel">Ingresar</button>
                 </form>
             </div>
         </div>
