--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
 <main class="main">
 
-
   <app-header></app-header>
   <div class="container">
-
-
-
-
-    <router-outlet />
+    <router-outlet></router-outlet>
 
     <app-footer></app-footer>
   </div>
