--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -3,7 +3,7 @@
     <div class="col-4">
         <div class="card">
             <div class="card-header text-center">
-                Contactar a JMB
+               <h3 class="text-color-jmb">Contáctar a JMB</h3>
             </div>
             <div class="card-body">
                 <form>
