--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark mb-1" style="height: 100px;">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">J M B</a>
+    <a class="navbar-brand" routerLink="">J. M. B.</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -13,9 +13,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#Servicios">Servicios</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Flota">Flota</a>
-        </li>
+ 
         <li class="nav-item">
           <a class="nav-link" href="#Mision">Misión</a>
         </li>
