--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <!--=======Carousel========-->
-
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -13,7 +12,7 @@
   <div class="container2 mt-2"><!--Encerrar todo en contenedor asi meter img y texto en uno solo-->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.crexellsa.com/wp-content/uploads/2019/08/the-doctor-4-min.jpg"
+        <img src="../../assets/img/148.JPG"
           class="d-block w-100 imagen-oscura " style="height: 420px;">
         <div class="text-container">
           <h5>DTM PARA EQUIPOS PESADOS</h5>
@@ -24,21 +23,21 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://media.lmneuquen.com/adjuntos/195/imagenes/004/102/0004102491.jpg?0000-00-00-00-00-00"
+        <img src="../../assets/img/chatas.jpg"
           class="d-block w-100 imagen-oscura" style="height: 420px;
         width: auto;" alt="...">
         <div class="text-container">
-          <h5>SERVICIO DE GRUAS</h5>
+          <h5>ALQUILER DE TRANSPORTES</h5>
           <p>Asistencia a la industria petrolera.Asistencia a la industria petrolera Asistencia a la industria
             petrolera Asistencia a la industria petrolera Asistencia a la industria petrolera Asistencia a la industria
             petrolera Asistencia a la industria petrolera Asistencia a la industria petrolera</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://www.crexellsa.com/wp-content/uploads/2019/08/Imagen-219.jpg"
+        <img src="../../assets/img/190.jpg"
           class="d-block w-100 imagen-oscura" style="height: 420px;">
         <div class="text-container">
-          <h5>SERVICIOS DE transporte</h5>
+          <h5>SERVICIO DE GRUAS</h5>
           <p>Asistencia para el transporte de maquinaria pesada Asistencia para el transporte de maquinaria pesada
             Asistencia para el transporte de maquinaria pesada Asistencia para el transporte de maquinaria pesada
             Asistencia para el transporte de maquinaria pesada Asistencia para el transporte de maquinaria pesada.</p>
@@ -59,9 +58,9 @@
 <!--============================-->
 
 
-<br><br>
+<br>
 <div id="Nosotros" class="text-primary">
-  <h3>NOSOTROS</h3>
+  <h5>NOSOTROS</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
@@ -73,9 +72,9 @@
   </p>
 </div>
 
-<br><br>
+<br>
 <section id="Servicios" class="text-success">
-  <h3>SERVICIOS</h3>
+  <h5>SERVICIOS</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
@@ -87,23 +86,9 @@
   </p>
 </section>
 
-<br><br>
-<section id="Flota" class="text-danger">
-  <h3>FLOTA</h3>
-  <p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-    type specimen book standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-    scrambled it to make a
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-    type specimen book
-  </p>
-</section>
-
-<br><br>
+<br>
 <section id="Mision" class="text-primary">
-  <h3>MISIÓN</h3>
+  <h5>MISIÓN</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
@@ -115,9 +100,9 @@
   </p>
 </section>
 
-<br><br>
+<br>
 <section id="Vision" class="text-success">
-  <h3>VISIÓN</h3>
+  <h5>VISIÓN</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
