--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/*========== GLOBAL CSS ============*/
+.text-color-jmb {
+    color: #0a7ac5
+}
