conexion y lectura firebase

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
 
 
 <br>
-<div id="Nosotros" class="text-primary">
+<div id="Nosotros" >
   <h5>NOSOTROS</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -73,7 +73,7 @@
 </div>
 
 <br>
-<section id="Servicios" class="text-success">
+<section id="Servicios" >
   <h5>SERVICIOS</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -87,7 +87,7 @@
 </section>
 
 <br>
-<section id="Mision" class="text-primary">
+<section id="Mision" >
   <h5>MISIÓN</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -101,7 +101,7 @@
 </section>
 
 <br>
-<section id="Vision" class="text-success">
+<section id="Vision" >
   <h5>VISIÓN</h5>
   <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
