--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="col-2">
-            <h5>JMB Hoy</h5>
+            <h5>J.M.B. Hoy</h5>
             <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Quienes somos</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Trabaja con nosotros</a></li>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="d-flex flex-column flex-sm-row justify-content-between border-top">
-        <p>© 2024 JMB Transportes</p>
+        <p>© 2024 J.M.B. Transportes</p>
         <ul class="list-unstyled d-flex">
             <li class="ms-3"> <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!"
                     role="button"><i class="fab fa-facebook-f"></i></a></li>
