--- a/src/app/panel/editar.component.html
+++ b/src/app/panel/editar.component.html
@@ -1,3 +1,15 @@
+<!--Migas de pan-->
+<small>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item "><a routerLink="/panel">Panel</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Editar</li>
+        </ol>
+    </nav>
+</small>
+<!---->
+
+
 <div class="card">
     <div class="card-header text-center">
         <h3 class="text-color-jmb"><i class="fa-solid fa-plus"></i> Editar usuario</h3>
