actualizaciones de lectura y agregado de datos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="d-flex flex-column flex-sm-row justify-content-between border-top">
-        <p>© 2024 J.M.B. Transportes</p>
+        <p>© 2024 J.M.B. Transportes servicios petroleros</p>
         <ul class="list-unstyled d-flex">
             <li class="ms-3"> <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!"
                     role="button"><i class="fab fa-facebook-f"></i></a></li>
